fix styles of Lists, login and registration (unnecessary scrollbar was appearing)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -160,7 +160,6 @@
     }
 }
 
-
 .step-content.visible {
     display: block;
 }
@@ -204,4 +203,8 @@ button:hover {
 .notification.success {
     background-color: #4e8d1f;
     color: white;
+}
+
+.mw-1000px {
+    max-width: 1000px;
 }
